# python_19.1_Web-basics

./: README.md  index.html  main.py  pyproject.toml
