[tool.poetry]
name = "python-19-1-web-basics"
version = "0.1.0"
description = ""
authors = ["banderastoni <banderastoni@rambler.ru>"]
readme = "README.md"
packages = [{include = "python_19"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
